<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- Title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        android:background="#352AB5">

        <ImageView
            android:id="@+id/img_back_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/str_user_record"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/str_manage"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_13" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_12"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:background="@drawable/round_search"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_14"
                android:background="@mipmap/search" />

            <EditText
                android:id="@+id/et_register_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/str_input_register_number"
                android:inputType="number"
                android:paddingLeft="@dimen/dp_8"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:gravity="center"
                android:text="@string/str_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_30"
                android:text="@string/str_register_number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/str_customer_signature"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:layout_marginTop="@dimen/dp_12"
            android:background="#ECEDED" />

        <ListView
            android:id="@+id/lv_record"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:visibility="gone"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_del"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_40"
                android:background="@drawable/btn_round_blue"
                android:text="@string/str_del"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12" />

            <CheckBox
                android:id="@+id/cb_all_election"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:textSize="@dimen/sp_15"
                android:text="全选" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
