<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        android:background="#3C45BA">

        <ImageView
            android:id="@+id/img_back_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/str_sync_measurement"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_15"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:background="@drawable/round_blue_frame"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6"
            android:text="@string/str_turn_left_5"
            android:textColor="#3455ED"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_direction_angle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_measuring_angle"
                android:layout_width="@dimen/dp_160"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_10"
                android:gravity="center_vertical"
                android:background="@drawable/round_search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@mipmap/staff_gauge"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sync_valus"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_13"
                android:layout_marginTop="@dimen/dp_5"/>

            <View
                android:id="@+id/sync_valus_bg"
                android:layout_width="@dimen/dp_130"
                android:layout_height="25dp"
                android:layout_marginTop="@dimen/dp_4"
                android:background="#3CB74D" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:src="@mipmap/cursor" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_determine"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/btn_selector"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6"
            android:text="@string/str_submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:enabled="false"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_left_measuring_angle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_left_measuring_angle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/underline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_right_measuring_angle"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_right_measuring_angle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/underline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sync_valus"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_sync_valus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/underline" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/dp_226"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/btn_selector"
            android:text="@string/str_Save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>
