<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="5dp"
        android:background="@drawable/bg_dialog_calibration"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_calibration"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            >

            <CheckBox
                android:id="@+id/checkbox_t1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textSize="14dp"
                android:text="T1"/>


            <CheckBox
                android:id="@+id/checkbox_t2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textSize="14dp"
                android:text="T2"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btn_device1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/str_device1"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_round_blue"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"/>


            <Button
                android:id="@+id/btn_device2"
                android:layout_marginRight="20dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/str_device2"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_round_blue"
                />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>