<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Title -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:background="#352AB5">

        <ImageView
            android:id="@+id/img_back_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/str_calibration"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_27"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_calibration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/calibration_" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/str_calibration"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/upload_" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/str_upload"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_read_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/read_back_" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/str_read_back"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_13" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_administration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/administration_" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/str_administration"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
